--- a/category.html
+++ b/category.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230920131344">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230920134400">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -22,7 +22,7 @@
             </a>
             <div class="header__search search">
                 <form action="#" class="search__body">
-                    <button type="button" class="search__btn">
+                    <button type="button" class="search__btn" title="Search">
                         <svg>
                             <use href="img/icons/icons.svg#search"></use>
                         </svg>
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                 </form>
-                <button type="button" class="search__close">
+                <button type="button" class="search__close" title="Close search">
                     <svg>
                         <use href="img/icons/icons.svg#close"></use>
                     </svg>
@@ -66,7 +66,7 @@
                         <li class="menu__item">
                             <a href="#" class="menu__link">WOMEN</a>
                             <div class="menu__submenu submenu">
-                                <button type="button" class="submenu__close">
+                                <button type="button" class="submenu__close" title="Close menu">
                                     <svg>
                                         <use href="img/icons/icons.svg#close"></use>
                                     </svg>
@@ -333,7 +333,7 @@
                         <li class="menu__item">
                             <a href="#" class="menu__link">Men</a>
                             <div class="menu__submenu submenu">
-                                <button type="button" class="submenu__close">
+                                <button type="button" class="submenu__close" title="Close menu">
                                     <svg>
                                         <use href="img/icons/icons.svg#close"></use>
                                     </svg>
@@ -600,7 +600,7 @@
                         <li class="menu__item">
                             <a href="#" class="menu__link">Brands</a>
                             <div class="menu__submenu submenu">
-                                <button type="button" class="submenu__close">
+                                <button type="button" class="submenu__close" title="Close menu">
                                     <svg>
                                         <use href="img/icons/icons.svg#close"></use>
                                     </svg>
@@ -686,7 +686,7 @@
                     </div>
                 </div>
                 <div class="header__user user-header">
-                    <button type="button" class="user-header__icon">
+                    <button type="button" class="user-header__icon" title="User menu">
                         <svg>
                             <use href="img/icons/icons.svg#user"></use>
                         </svg>
@@ -707,12 +707,12 @@
                         </button>
                     </div>
                 </div>
-                <button type="button" class="header__search-icon">
+                <button type="button" class="header__search-icon" title="Search">
                     <svg>
                         <use href="img/icons/icons.svg#search"></use>
                     </svg>
                 </button>
-                <button type="button" class="header__menu-icon menu-icon"></button>
+                <button type="button" class="header__menu-icon menu-icon" title="Menu"></button>
             </div>
         </div>
     </div>
@@ -1090,15 +1090,15 @@
                                                     <div class="options-container">
                                                         <div class="option">
                                                             <input type="radio" name="count" id="count40" value="40">
-                                                            <label for="for count40">40</label>
+                                                            <label for="count40">40</label>
                                                         </div>
                                                         <div class="option">
                                                             <input type="radio" name="count" id="count80" value="80">
-                                                            <label for="for count80">80</label>
+                                                            <label for="count80">80</label>
                                                         </div>
                                                         <div class="option">
                                                             <input type="radio" name="count" id="count140" value="140">
-                                                            <label for="for count140">140</label>
+                                                            <label for="count140">140</label>
                                                         </div>
                                                     </div>
                                                     <div class="selected">
@@ -1115,35 +1115,35 @@
                                                         <div class="option">
                                                             <input type="radio" name="sort" id="recommended"
                                                                 value="recommended">
-                                                            <label for="for recommended">By recommended</label>
+                                                            <label for="recommended">By recommended</label>
                                                         </div>
                                                         <div class="option">
                                                             <input type="radio" name="sort" id="price-asc"
                                                                 value="price-asc">
-                                                            <label for="for price-asc">Price low to high</label>
+                                                            <label for="price-asc">Price low to high</label>
                                                         </div>
                                                         <div class="option">
                                                             <input type="radio" name="sort" id="price-desc"
                                                                 value="price-desc">
-                                                            <label for="for price-desc">Price high to low</label>
+                                                            <label for="price-desc">Price high to low</label>
                                                         </div>
                                                         <div class="option">
                                                             <input type="radio" name="sort" id="newest" value="newest">
-                                                            <label for="for newest">Newest</label>
+                                                            <label for="newest">Newest</label>
                                                         </div>
                                                         <div class="option">
                                                             <input type="radio" name="sort" id="oldest" value="oldest">
-                                                            <label for="for oldest">Oldest</label>
+                                                            <label for="oldest">Oldest</label>
                                                         </div>
                                                         <div class="option">
-                                                            <input type="radio" name="sort" id="brans-asc"
-                                                                value="brans-asc">
-                                                            <label for="for brans-asc">Brands A-Z</label>
+                                                            <input type="radio" name="sort" id="brands-asc"
+                                                                value="brands-asc">
+                                                            <label for="brands-asc">Brands A-Z</label>
                                                         </div>
                                                         <div class="option">
-                                                            <input type="radio" name="sort" id="brans-desc"
-                                                                value="brans-desc">
-                                                            <label for="for brans-desc">Brands Z-A</label>
+                                                            <input type="radio" name="sort" id="brands-desc"
+                                                                value="brands-desc">
+                                                            <label for="brands-desc">Brands Z-A</label>
                                                         </div>
                                                     </div>
                                                     <div class="selected">
@@ -2435,7 +2435,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230920131344"></script>
+    <script src="js/app.min.js?_v=20230920134400"></script>
 </body>
 
 </html>
