--- a/error.html
+++ b/error.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230920131344">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230920135518">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -22,7 +22,7 @@
             </a>
             <div class="header__search search">
                 <form action="#" class="search__body">
-                    <button type="button" class="search__btn">
+                    <button type="button" class="search__btn" title="Search">
                         <svg>
                             <use href="img/icons/icons.svg#search"></use>
                         </svg>
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                 </form>
-                <button type="button" class="search__close">
+                <button type="button" class="search__close" title="Close search">
                     <svg>
                         <use href="img/icons/icons.svg#close"></use>
                     </svg>
@@ -66,7 +66,7 @@
                         <li class="menu__item">
                             <a href="#" class="menu__link">WOMEN</a>
                             <div class="menu__submenu submenu">
-                                <button type="button" class="submenu__close">
+                                <button type="button" class="submenu__close" title="Close menu">
                                     <svg>
                                         <use href="img/icons/icons.svg#close"></use>
                                     </svg>
@@ -333,7 +333,7 @@
                         <li class="menu__item">
                             <a href="#" class="menu__link">Men</a>
                             <div class="menu__submenu submenu">
-                                <button type="button" class="submenu__close">
+                                <button type="button" class="submenu__close" title="Close menu">
                                     <svg>
                                         <use href="img/icons/icons.svg#close"></use>
                                     </svg>
@@ -600,7 +600,7 @@
                         <li class="menu__item">
                             <a href="#" class="menu__link">Brands</a>
                             <div class="menu__submenu submenu">
-                                <button type="button" class="submenu__close">
+                                <button type="button" class="submenu__close" title="Close menu">
                                     <svg>
                                         <use href="img/icons/icons.svg#close"></use>
                                     </svg>
@@ -686,7 +686,7 @@
                     </div>
                 </div>
                 <div class="header__user user-header">
-                    <button type="button" class="user-header__icon">
+                    <button type="button" class="user-header__icon" title="User menu">
                         <svg>
                             <use href="img/icons/icons.svg#user"></use>
                         </svg>
@@ -707,12 +707,12 @@
                         </button>
                     </div>
                 </div>
-                <button type="button" class="header__search-icon">
+                <button type="button" class="header__search-icon" title="Search">
                     <svg>
                         <use href="img/icons/icons.svg#search"></use>
                     </svg>
                 </button>
-                <button type="button" class="header__menu-icon menu-icon"></button>
+                <button type="button" class="header__menu-icon menu-icon" title="Menu"></button>
             </div>
         </div>
     </div>
@@ -831,7 +831,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230920131344"></script>
+    <script src="js/app.min.js?_v=20230920135518"></script>
 </body>
 
 </html>
