--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/product.min.css?_v=20230920140344">
+    <link rel="stylesheet" href="css/product.min.css?_v=20230920141030">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -2189,7 +2189,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230920140344" defer></script>
+    <script src="js/app.min.js?_v=20230920141030" async></script>
 </body>
 
 </html>
