--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/product.min.css?_v=20230920141030">
+    <link rel="stylesheet" href="css/product.min.css?_v=20230920141642">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -1066,131 +1066,134 @@
                                                 </svg>
                                             </button>
                                         </div>
-                                        <ul class="shops__list" data-simplebar>
-                                            <li class="shops__item">
-                                                <div class="shops__card card-shops">
-                                                    <div class="card-shops__header">
-                                                        <a href="#" class="card-shops__title">italist.com</a>
-                                                        <div class="card-shops__prices prices-shops">
-                                                            <div class="prices-shops__reg">
-                                                                £1221.44
+                                        <div class="shops__wrapper" data-simplebar>
+                                            <ul class="shops__list">
+                                                <li class="shops__item">
+                                                    <div class="shops__card card-shops">
+                                                        <div class="card-shops__header">
+                                                            <a href="#" class="card-shops__title">italist.com</a>
+                                                            <div class="card-shops__prices prices-shops">
+                                                                <div class="prices-shops__reg">
+                                                                    £1221.44
+                                                                </div>
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="card-shops__sizes">
-                                                        Available sizes:
-                                                        <span>46</span>
-                                                        <span>48</span>
-                                                        <span>50</span>
-                                                        <span>52</span>
-                                                        <span>54</span>
-                                                        <span>56</span>
-                                                    </div>
-                                                    <div class="card-shops__colors">
-                                                        Available colors:
-                                                        <div
-                                                            class="card-shops__color colors-card__item colors-card__item_black">
-                                                            <span></span>
+                                                        <div class="card-shops__sizes">
+                                                            Available sizes:
+                                                            <span>46</span>
+                                                            <span>48</span>
+                                                            <span>50</span>
+                                                            <span>52</span>
+                                                            <span>54</span>
+                                                            <span>56</span>
                                                         </div>
-                                                        <div
-                                                            class="card-shops__color colors-card__item colors-card__item_red">
-                                                            <span></span>
-                                                        </div>
-                                                        <div
-                                                            class="card-shops__color colors-card__item colors-card__item_white">
-                                                            <span></span>
-                                                        </div>
-                                                    </div>
-                                                    <a href="#" class="cards-shops__btn btn-green">
-                                                        Buy
-                                                    </a>
-                                                </div>
-                                            </li>
-                                            <li class="shops__item">
-                                                <div class="shops__card card-shops">
-                                                    <div class="card-shops__header">
-                                                        <a href="#" class="card-shops__title">urbanchiccloset.com</a>
-                                                        <div class="card-shops__prices prices-shops">
-                                                            <div class="prices-shops__new">
-                                                                $ 333.67
+                                                        <div class="card-shops__colors">
+                                                            Available colors:
+                                                            <div
+                                                                class="card-shops__color colors-card__item colors-card__item_black">
+                                                                <span></span>
                                                             </div>
-                                                            <div class="prices-shops__old">
-                                                                $ 333.67
+                                                            <div
+                                                                class="card-shops__color colors-card__item colors-card__item_red">
+                                                                <span></span>
                                                             </div>
-                                                            <div class="prices-shops__label">
-                                                                -30 %
+                                                            <div
+                                                                class="card-shops__color colors-card__item colors-card__item_white">
+                                                                <span></span>
                                                             </div>
                                                         </div>
+                                                        <a href="#" class="cards-shops__btn btn-green">
+                                                            Buy
+                                                        </a>
                                                     </div>
-                                                    <div class="card-shops__sizes">
-                                                        Available sizes:
-                                                        <span>46</span>
-                                                        <span>48</span>
-                                                        <span>50</span>
-                                                        <span>52</span>
-                                                        <span>54</span>
-                                                        <span>56</span>
-                                                    </div>
-                                                    <div class="card-shops__colors">
-                                                        Available colors:
-                                                        <div
-                                                            class="card-shops__color colors-card__item colors-card__item_black">
-                                                            <span></span>
-                                                        </div>
-                                                        <div
-                                                            class="card-shops__color colors-card__item colors-card__item_red">
-                                                            <span></span>
-                                                        </div>
-                                                        <div
-                                                            class="card-shops__color colors-card__item colors-card__item_white">
-                                                            <span></span>
-                                                        </div>
-                                                    </div>
-                                                    <a href="#" class="cards-shops__btn btn-green">
-                                                        Buy
-                                                    </a>
-                                                </div>
-                                            </li>
-                                            <li class="shops__item">
-                                                <div class="shops__card card-shops">
-                                                    <div class="card-shops__header">
-                                                        <a href="#" class="card-shops__title">italist.com</a>
-                                                        <div class="card-shops__prices prices-shops">
-                                                            <div class="prices-shops__reg">
-                                                                £1221.44
+                                                </li>
+                                                <li class="shops__item">
+                                                    <div class="shops__card card-shops">
+                                                        <div class="card-shops__header">
+                                                            <a href="#"
+                                                                class="card-shops__title">urbanchiccloset.com</a>
+                                                            <div class="card-shops__prices prices-shops">
+                                                                <div class="prices-shops__new">
+                                                                    $ 333.67
+                                                                </div>
+                                                                <div class="prices-shops__old">
+                                                                    $ 333.67
+                                                                </div>
+                                                                <div class="prices-shops__label">
+                                                                    -30 %
+                                                                </div>
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="card-shops__sizes">
-                                                        Available sizes:
-                                                        <span>46</span>
-                                                        <span>48</span>
-                                                        <span>50</span>
-                                                        <span>52</span>
-                                                        <span>54</span>
-                                                        <span>56</span>
-                                                    </div>
-                                                    <div class="card-shops__colors">
-                                                        Available colors:
-                                                        <div
-                                                            class="card-shops__color colors-card__item colors-card__item_black">
-                                                            <span></span>
+                                                        <div class="card-shops__sizes">
+                                                            Available sizes:
+                                                            <span>46</span>
+                                                            <span>48</span>
+                                                            <span>50</span>
+                                                            <span>52</span>
+                                                            <span>54</span>
+                                                            <span>56</span>
                                                         </div>
-                                                        <div
-                                                            class="card-shops__color colors-card__item colors-card__item_red">
-                                                            <span></span>
+                                                        <div class="card-shops__colors">
+                                                            Available colors:
+                                                            <div
+                                                                class="card-shops__color colors-card__item colors-card__item_black">
+                                                                <span></span>
+                                                            </div>
+                                                            <div
+                                                                class="card-shops__color colors-card__item colors-card__item_red">
+                                                                <span></span>
+                                                            </div>
+                                                            <div
+                                                                class="card-shops__color colors-card__item colors-card__item_white">
+                                                                <span></span>
+                                                            </div>
                                                         </div>
-                                                        <div
-                                                            class="card-shops__color colors-card__item colors-card__item_white">
-                                                            <span></span>
-                                                        </div>
+                                                        <a href="#" class="cards-shops__btn btn-green">
+                                                            Buy
+                                                        </a>
                                                     </div>
-                                                    <a href="#" class="cards-shops__btn btn-green">
-                                                        Buy
-                                                    </a>
-                                                </div>
-                                            </li>
-                                        </ul>
+                                                </li>
+                                                <li class="shops__item">
+                                                    <div class="shops__card card-shops">
+                                                        <div class="card-shops__header">
+                                                            <a href="#" class="card-shops__title">italist.com</a>
+                                                            <div class="card-shops__prices prices-shops">
+                                                                <div class="prices-shops__reg">
+                                                                    £1221.44
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card-shops__sizes">
+                                                            Available sizes:
+                                                            <span>46</span>
+                                                            <span>48</span>
+                                                            <span>50</span>
+                                                            <span>52</span>
+                                                            <span>54</span>
+                                                            <span>56</span>
+                                                        </div>
+                                                        <div class="card-shops__colors">
+                                                            Available colors:
+                                                            <div
+                                                                class="card-shops__color colors-card__item colors-card__item_black">
+                                                                <span></span>
+                                                            </div>
+                                                            <div
+                                                                class="card-shops__color colors-card__item colors-card__item_red">
+                                                                <span></span>
+                                                            </div>
+                                                            <div
+                                                                class="card-shops__color colors-card__item colors-card__item_white">
+                                                                <span></span>
+                                                            </div>
+                                                        </div>
+                                                        <a href="#" class="cards-shops__btn btn-green">
+                                                            Buy
+                                                        </a>
+                                                    </div>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -2189,7 +2192,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230920141030" async></script>
+    <script src="js/app.min.js?_v=20230920141642" defer></script>
 </body>
 
 </html>
