--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/main.min.css?_v=20230920141926">
+    <link rel="stylesheet" href="css/main.min.css?_v=20230920142727">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -3150,7 +3150,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230920141926"></script>
+    <script src="js/app.min.js?_v=20230920142727" defer></script>
 </body>
 
 </html>
