--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/product.min.css?_v=20230921103311">
+    <link rel="stylesheet" href="css/product.min.css?_v=20230921105136">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -2168,8 +2168,7 @@
         </div>
     </div>
 </div>
-
-<div class="cookies">
+    <div class="cookies">
     <div class="cookies__body">
         <div class="cookies__info">
             <h3 class="cookies__title title3">Cookies!</h3>
@@ -2192,7 +2191,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230921103311" defer></script>
+    <script src="js/product.min.js?_v=20230921105136" defer></script>
 </body>
 
 </html>
