--- a/looks.html
+++ b/looks.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230921114158">
+    <link rel="stylesheet" href="css/looks.min.css?_v=20230921115232">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -4097,35 +4097,7 @@
 </footer>
     </div>
 
-    <div class="popup" id="viewer">
-    <div class="popup__wrapper">
-        <div class="popup__content viewer">
-            <button type="button" class="viewer__close popup__close">
-                <svg>
-                    <use href="img/icons/icons.svg#close"></use>
-                </svg>
-            </button>
-            <div class="viewer__slider">
-                <div class="viewer__wrapper swiper-wrapper">
-                </div>
-            </div>
-            <div class="viewer__navigation">
-                <button type="button" class="viewer__prev">
-                    <svg>
-                        <use href="img/icons/icons.svg#arrow"></use>
-                    </svg>
-                </button>
-                <button type="button" class="viewer__next">
-                    <svg>
-                        <use href="img/icons/icons.svg#arrow"></use>
-                    </svg>
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="cookies">
+    <div class="cookies">
     <div class="cookies__body">
         <div class="cookies__info">
             <h3 class="cookies__title title3">Cookies!</h3>
@@ -4148,7 +4120,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230921114158"></script>
+    <script src="js/looks.min.js?_v=20230921115232" defer></script>
 </body>
 
 </html>
