--- a/looks.html
+++ b/looks.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/looks.min.css?_v=20230921122953">
+    <link rel="stylesheet" href="css/looks.min.css?_v=20230921123726">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -783,7 +783,7 @@
                                     wonderful example of transeasonal style, this look is perfect come warmer weather.
                                     This ensemble demonstrates how to remain fashionable as you age into your 50s.
                                 </div>
-                                <a href="#" class="card-looks__link">
+                                <a href="#" class="card-looks__link" title="Card link">
                                     <svg>
                                         <use href="img/icons/icons.svg#arrow"></use>
                                     </svg>
@@ -806,7 +806,7 @@
                                     transition look, you found it. A safe bet ensemble proper for 50-year-old men who
                                     like to dress casually.
                                 </div>
-                                <a href="#" class="card-looks__link">
+                                <a href="#" class="card-looks__link" title="Card link">
                                     <svg>
                                         <use href="img/icons/icons.svg#arrow"></use>
                                     </svg>
@@ -829,7 +829,7 @@
                                     have in your transeasonal rotation. Think guys in their fifties can't pull off cool
                                     off-duty outfits? This pairing is indisputable proof of otherwise.
                                 </div>
-                                <a href="#" class="card-looks__link">
+                                <a href="#" class="card-looks__link" title="Card link">
                                     <svg>
                                         <use href="img/icons/icons.svg#arrow"></use>
                                     </svg>
@@ -852,7 +852,7 @@
                                     promise you'll save a lot of time racking your brain for a look on more than one
                                     morning. This pairing shows how to remain stylish as you slip into your 50s.
                                 </div>
-                                <a href="#" class="card-looks__link">
+                                <a href="#" class="card-looks__link" title="Card link">
                                     <svg>
                                         <use href="img/icons/icons.svg#arrow"></use>
                                     </svg>
@@ -868,7 +868,7 @@
                                         <img data-src="img/looks/image1.png" src="img/plug.png" alt="Image">
                                     </picture>
                                 </a>
-                                <a href="#" class="card-looks__link">
+                                <a href="#" class="card-looks__link" title="Card link">
                                     <svg>
                                         <use href="img/icons/icons.svg#arrow"></use>
                                     </svg>
@@ -884,7 +884,7 @@
                                         <img data-src="img/looks/image2.png" src="img/plug.png" alt="Image">
                                     </picture>
                                 </a>
-                                <a href="#" class="card-looks__link">
+                                <a href="#" class="card-looks__link" title="Card link">
                                     <svg>
                                         <use href="img/icons/icons.svg#arrow"></use>
                                     </svg>
@@ -900,7 +900,7 @@
                                         <img data-src="img/looks/image3.png" src="img/plug.png" alt="Image">
                                     </picture>
                                 </a>
-                                <a href="#" class="card-looks__link">
+                                <a href="#" class="card-looks__link" title="Card link">
                                     <svg>
                                         <use href="img/icons/icons.svg#arrow"></use>
                                     </svg>
@@ -916,7 +916,7 @@
                                         <img data-src="img/looks/image4.png" src="img/plug.png" alt="Image">
                                     </picture>
                                 </a>
-                                <a href="#" class="card-looks__link">
+                                <a href="#" class="card-looks__link" title="Card link">
                                     <svg>
                                         <use href="img/icons/icons.svg#arrow"></use>
                                     </svg>
@@ -4178,7 +4178,7 @@
         </div>
     </div>
 </div>
-    <script src="js/looks.min.js?_v=20230921122953" defer></script>
+    <script src="js/looks.min.js?_v=20230921123726" defer></script>
 </body>
 
 </html>
